[isa] fixed settings offscreen

--- a/frontend/src/components/plant-dashboard/PlantSettings.css
+++ b/frontend/src/components/plant-dashboard/PlantSettings.css
@@ -1,5 +1,5 @@
 .plant-settings-form {
-  position: absolute;
+  position: fixed;
   top: 95px;
   right: 0%;
   width: 350px;
@@ -8,7 +8,9 @@
   background: linear-gradient(to bottom, #dae5e0 0%, #89b8a3 100%);
   color: #416455;
   /* box-shadow: -2px 0 12px rgba(0, 0, 0, 0.25); */
-  transform: translateX(100%);
+  transform: translateX(50px);
+  opacity: 0;
+  pointer-events: none; /* prevents clicks while hidden */
   transition:
     transform 0.5s cubic-bezier(0.25, 1, 0.5, 1),
     opacity 0.5s ease-in-out;
@@ -20,7 +22,9 @@
 }
 .plant-settings-form.open-form {
   transform: translateX(0);
+  opacity: 1;
   right: 10%;
+  pointer-events: auto; /* allow clicks when open */
 }
 
 .close-btn-wrapper {
